defined input, html only

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <title>Form biglietto treno</title>
 </head>
 <body>
+  <h1>
+    Calcola il prezzo del tuo biglietto
+  </h1>
+
+  <input type="text" name="name" id="name" placeholder="Nome Cognome">
+  <input type="text" name="km" id="km" placeholder="Km da percorrere">
+  <select name="eta" id="eta">
+    <option value="volvo">Aduto</option>
+    <option value="saab">Senior (Over 65)</option>
+    <option value="opel">Giovani (Under 18)</option>
+  </select>
+  <button>Genera</button>
   
+
+
+  <script src="js/main.js"></script>
+
 </body>
 </html>
