--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Form biglietto treno</title>
 </head>
 <body>
-  <h1>
+  <h1 id="title">
     Calcola il prezzo del tuo biglietto
   </h1>
 
@@ -18,7 +18,7 @@
     <option value="saab">Senior (Over 65)</option>
     <option value="opel">Giovani (Under 18)</option>
   </select>
-  <button>Genera</button>
+  <button id="genera">Genera</button>
   
 
 
