myButton function tested

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     Calcola il prezzo del tuo biglietto
   </h1>
 
-  <input type="text" name="name" id="name" placeholder="Nome Cognome">
-  <input type="text" name="km" id="km" placeholder="Km da percorrere">
-  <select name="eta" id="eta">
-    <option value="volvo">Aduto</option>
-    <option value="saab">Senior (Over 65)</option>
-    <option value="opel">Giovani (Under 18)</option>
+  <input type="text" id="name" placeholder="Nome Cognome" value="nome">
+  <input type="text" id="km" placeholder="Km da percorrere" value="kilometri">
+  <select id="eta">
+    <option value="Adulto">Aduto</option>
+    <option value="Senior">Senior (Over 65)</option>
+    <option value="Giovani">Giovani (Under 18)</option>
   </select>
   <button id="genera">Genera</button>
+
+  <h2 id="biglietto">
+
+  </h2>
   
 
 
