myButton value fixed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1 id="title">
     Calcola il prezzo del tuo biglietto
   </h1>
-
-  <input type="text" id="name" placeholder="Nome Cognome" value="nome">
-  <input type="text" id="km" placeholder="Km da percorrere" value="kilometri">
+  
+  <input type="text" id="name" placeholder="Nome Cognome">
+  <input type="text" id="km" placeholder="Km da percorrere">
   <select id="eta">
     <option value="Adulto">Aduto</option>
     <option value="Senior">Senior (Over 65)</option>
