ticket info section defined

--- a/index.html
+++ b/index.html
@@ -60,11 +60,30 @@
         <h3>DETTAGLI PASSEGGERI</h3>
 
         <div class="user-data">
-          <h5>NOME PASSEGGERO</h5>
-          <h5>OFFERTA</h5>
-          <h5>CARROZZA</h5>
-          <h5>CODICE CP</h5>
-          <h5>COSTO BIGLIETTO</h5>
+          <div class="passenger">
+            <h4>NOME PASSEGGERO</h4>
+            <div id="pass-name"></div>
+          </div>
+
+          <div class="offer">
+            <h4>Offerta</h4>
+            <div id="offer-price"></div>
+          </div>
+
+          <div class="train-car">
+            <h4>Carrozza</h4>
+            <div id="car-num"></div>
+          </div>
+
+          <div class="code">
+            <h4>Codice CP</h4>
+            <div id="ticket-code"></div>
+          </div>
+
+          <div class="total-price">
+            <h4>Costo biglietto</h4>
+            <div id="ticket-price"></div>
+          </div>
         </div>
       </div>
     </section>
